--- a/get_theta_rep.ipynb
+++ b/get_theta_rep.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3e92a281-4d7d-4558-9c4d-e813b704aaa6",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Define the function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "id": "342d7fc0-7313-4419-8fd4-88963d21cc5f",
    "metadata": {},
    "outputs": [],
@@ -13,9 +23,9 @@
     "\n",
     "# load, normalize, and resize\n",
     "def load_transform(filepath, \n",
-    "                   img_size=(4, 4), \n",
-    "                   conv_to_theta=False,\n",
-    "                   flatten=False):\n",
+    "                   img_size=(128, 128), \n",
+    "                   conv_to_theta=True,\n",
+    "                   flatten=True):\n",
     "    \n",
     "    \"\"\"\n",
     "    flatten (True/False) - flatten to a vector\n",
@@ -35,8 +45,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "133bea33-9dff-445e-b9e2-fcbaa7a92c35",
+   "metadata": {},
+   "source": [
+    "## Test on One image"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "id": "258f4fc8-011e-4cce-b37a-16007c3cce09",
    "metadata": {},
    "outputs": [],
@@ -47,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "id": "02551b46-d220-4b5f-bbf2-20100495019f",
    "metadata": {},
    "outputs": [
@@ -61,10 +79,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fea79afc250>"
+       "<matplotlib.image.AxesImage at 0x7f800007d7e0>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -96,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "id": "f12063e7-a564-4860-bc92-002fa79ada40",
    "metadata": {},
    "outputs": [
@@ -127,9 +145,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2b11766a-7de6-4e97-8b7d-db20ba19250b",
+   "metadata": {},
+   "source": [
+    "## Run on All images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b42a139b-a9eb-44f3-8715-6f5ffad49b3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_set_0 2560\n",
+      "train_set_1 2561\n",
+      "test_set_0 640\n",
+      "test_set_1 651\n"
+     ]
+    }
+   ],
+   "source": [
+    "import glob\n",
+    "train_set_0 = glob.glob(\"data/train/NonDemented/*.jpg\")\n",
+    "\n",
+    "train_set_1 = []\n",
+    "for k in ['VeryMild', 'Mild', 'Moderate']:\n",
+    "    train_set_1 += glob.glob(f\"data/train/{k}Demented/*.jpg\")\n",
+    "\n",
+    "test_set_0 = glob.glob(\"data/test/NonDemented/*.jpg\")\n",
+    "\n",
+    "for k in ['VeryMild', 'Mild', 'Moderate']:\n",
+    "    test_set_1 += glob.glob(f\"data/test/{k}Demented/*.jpg\")\n",
+    "\n",
+    "print(\"train_set_0\", len(train_set_0))\n",
+    "print(\"train_set_1\", len(train_set_1))\n",
+    "\n",
+    "print(\"test_set_0\", len(test_set_0))\n",
+    "print(\"test_set_1\", len(test_set_1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f6316e99-caf2-4393-8691-425a062448d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run for all\n",
+    "train_set_0b = [load_transform(f) for f in train_set_0]\n",
+    "train_set_1b = [load_transform(f) for f in train_set_1]\n",
+    "\n",
+    "test_set_0b = [load_transform(f) for f in test_set_0]\n",
+    "test_set_1b = [load_transform(f) for f in test_set_1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "73e3f679-217b-44cf-9705-3b515b1c22a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save\n",
+    "np.save('data/processed/train_set_0.npy', train_set_0b)\n",
+    "np.save('data/processed/train_set_1.npy', train_set_1b)\n",
+    "\n",
+    "np.save('data/processed/test_set_0.npy', test_set_0b)\n",
+    "np.save('data/processed/test_set_1.npy', test_set_1b)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b70d678-3136-461c-b8bc-c316da6ccca8",
+   "id": "1ed64e4c-2839-4126-b6cd-1a4f94add6ff",
    "metadata": {},
    "outputs": [],
    "source": []
